--- a/src/body.html
+++ b/src/body.html
@@ -8,7 +8,7 @@
     <div id="ready2" class="ready">loading... </div>
     <div id="ready3" class="ready">loading... </div>
 
-    <button id="do">do it!</button>
+    <button id="do">do it</button>
 
     <script>
     var $config = {
