--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 
     <script>
     var $config = {
-
+        vf : false,
         jsr: {
             myFunction :'{!$RemoteAction.SPA.myFunction}',
             myOtherFunction :'{!$RemoteAction.SPA.myOtherFunction}'
@@ -59,6 +59,7 @@
     </script>
     <!-- load our javascript resources at the end -->
     <script src="bower_components/jsr-mocks/dist/jsr-mocks.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/module.js"></script>
+
+
+    <script src="js/all_scripts.js"></script>
 </html>
