fix img bug on vf

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
             myOtherFunction :'{!$RemoteAction.SPA.myOtherFunction}'
         },
         img: {
-            '.loading' : "{!URLFOR($Resource.spa_sample, 'img/loading.gif')}"
+            '_base' : "{!URLFOR($Resource.spa_sample, 'img/loading.gif')}"
         },
         mocks :{
             '{!$RemoteAction.SPA.myFunction}' : {
