add gulp push vf page

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 
     <!-- Add your site or application content here -->
 
-    <div id="ready" class="ready">I am ready already</div>
+    <div id="ready" class="ready">I am ready already!!!</div>
     <div id="ready2" class="ready"><img src="img/loading.gif" alt="" class="loading"/></div>
     <div id="ready3" class="ready"><img src="img/loading.gif" alt="" class="loading"/></div>
 
