update functional tests

--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Hey Now!</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Hey Now!</title>
 
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
@@ -33,8 +31,10 @@
 <div id="ready" class="ready">I am ready already</div>
 <div id="ready2" class="ready"><img src="img/loading.gif" alt="" class="loading"/></div>
 <div id="ready3" class="ready"><img src="img/loading.gif" alt="" class="loading"/></div>
+<div id="ready4" class="ready"><img src="img/loading.gif" alt="" class="loading"/></div>
 
 <button id="do">do it!</button>
+<input id="input" type="text" placeholder="type here"/>
 
 <script>
 var $config = {
